added responsive desing

--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,14 @@
 }
 
 .btn-primary{
-    
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 600;
+   border: 0;
+   padding: 15px 20px;
+
 }
 
 /* header related style */
@@ -72,4 +79,42 @@ nav li a{
     font-weight: 400;
     margin:10px 0;
    
+}
+.banner img{
+    width: 100%;
+}
+
+
+
+
+
+
+/* responsive design */
+/*  for Mobile devices  */
+@media screen and (max-width:576px){
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+        
+    }
+    nav>ul{
+        margin-top: 20px;
+    }
+}
+
+/* tablet or medium device */
+@media screen and (min-width:576px) and (max-width:960px){
+    header{
+        padding: 20px 30px;
+    }
+    nav{
+        flex-direction: column;
+        
+    }
+
+    nav>ul{
+        margin-top: 25px;
+    }
 }
