--- a/styles/style.css
+++ b/styles/style.css
@@ -131,6 +131,91 @@ main{
 }
 
 
+/* some facts related style */
+
+.Some-Facts{
+    margin-top: 70px;
+}
+.some-facts-title{
+    color: var(--Dark-01, #131313);
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.some-facts-descraption{
+
+    color: var(--Dark-03, #727272);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    margin-top: 20px;
+}
+.some-facts-card-container{
+    display: flex;
+    justify-content: space-around;
+    margin-top:50px;
+   
+}
+
+.some-facts-card-container .card{
+     border-radius: 8px;
+     border: 1px solid #FF900E;
+     text-align: center;
+     padding: 40px 30px;
+}
+
+.some-facts-card-container .card-stats{
+    color: var(--Dark-02, #424242);
+    font-size:2.5rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+.some-facts-card-container .card-title{
+    color: var(--Dark-03, #727272);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
+
+/* spnsore style */
+
+.sponspos{
+    text-align: center;
+    margin-top: 100px;
+}
+.sponsopre-title{
+    color: var(--Dark-01, #131313);
+    font-size: 2.5rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.sponsore-descraption{
+    color: var(--Dark-03, #727272);
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    margin-top: 20px;
+}
+
+ .sponsor-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    /* gap: 20px; */
+ }
+
+ .sponsor-img-container img{
+     margin-top: 50px;
+     /* width: 165px; */
+ }
+
+
+
+
 
 
 
@@ -159,7 +244,8 @@ main{
     }
     .teams-img-container{
         grid-template-columns:1fr;
-        /* align-items: center; */
+        gap: 10px;
+        
     }
 
     .teams-content{
@@ -170,6 +256,23 @@ main{
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    .some-facts-card-container{
+        flex-direction: column;
+        gap: 20px;
+        padding-left: 20px;
+        padding-right: 20px;
+
+    }
+    .sponsor-img-container{
+     display: grid;
+     grid-template-columns: repeat(1,1fr);
+     
+    }
+    .sponsor-img-container img{
+        margin: 30px auto;
+    }
+
 
 }
 
@@ -186,8 +289,32 @@ main{
     .teams-container{
         flex-direction: column;
     }
+    .teams-img-container{
+        grid-template-columns:repeat(2,1fr);
+        gap: 10px;
+    }
+    .teams-content{
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
 
     nav>ul{
         margin-top: 25px;
     }
+    .some-facts-card-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 20px;
+    }
+
+
+    .sponsor-img-container{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        
+       }
+       .sponsor-img-container img{
+           margin: 30px auto;
+       }
 }
