--- a/styles/style.css
+++ b/styles/style.css
@@ -185,8 +185,13 @@ main{
 .features{
     display:flex;
     margin-top: 130px;
-    gap: 100px;
+    gap: 20px;
 }
+
+ .features-img img{
+    /* height:%; */
+    /* margin-left: 10px; */
+ }
 .features-title{
     color: var(--Dark-01, #131313);
    font-size: 2.5rem;
@@ -207,8 +212,8 @@ main{
     border-radius: 8px;
     background: #FFF;
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
-    margin-top: 50px;
-    padding: 30px;
+    margin-top:10px;
+    padding:20px;
    
 }
 
@@ -217,6 +222,8 @@ main{
     background: #FF900E;
     width:320px;
     padding:20px 40px; 
+    position: relative;
+    bottom: 100px;
 }
 
 .ten-years-badge h2{
@@ -272,9 +279,23 @@ main{
 
 
 
+/* footer related style */
 
+ .footer{
+    margin: 100px 0px;
+    border-radius: 8px;
+    background: #FFF4E7;
+ }
 
-
+ .footer p{
+    color: var(--Dark-02, #424242);
+     text-align: center; 
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 40px 30px;
+ }
 
 
 
@@ -312,6 +333,19 @@ main{
         padding-left: 20px;
         padding-right: 20px;
     }
+
+    .features{
+        flex-direction: column;
+    }
+     .features-img img{
+       width:90%; 
+        margin-left: 0;
+     }
+     .ten-years-badge{
+        position: static;
+        max-width:300px;
+     }
+
 
     .some-facts-card-container{
         flex-direction: column;
@@ -364,6 +398,9 @@ main{
         gap: 20px;
     }
 
+    .features{
+        flex-direction: column;
+    }
 
     .sponsor-img-container{
         display: grid;
